--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -1,256 +1,257 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- This file is part of PerAn. PerAn is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published 
-	by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. PerAn is distributed in the hope that it will be useful, 
-	but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. 
-	You should have received a copy of the GNU General Public License along with PerAn. If not, see <http://www.gnu.org/licenses />. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>dependency</artifactId>
-	<name>peass-dependency</name>
+  by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. PerAn is distributed in the hope that it will be useful, 
+  but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. 
+  You should have received a copy of the GNU General Public License along with PerAn. If not, see <http://www.gnu.org/licenses />. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <artifactId>dependency</artifactId>
+  <name>peass-dependency</name>
 
-	<inceptionYear>2017</inceptionYear>
+  <inceptionYear>2017</inceptionYear>
 
-	<parent>
-		<groupId>de.dagere.peass</groupId>
-		<artifactId>peass-parent</artifactId>
-		<version>0.1.10-SNAPSHOT</version>
-	</parent>
+  <parent>
+    <groupId>de.dagere.peass</groupId>
+    <artifactId>peass-parent</artifactId>
+    <version>0.1.10-SNAPSHOT</version>
+  </parent>
 
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.9.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-pmd-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.9.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest</artifactId>
-			<version>2.2</version>
-			<scope>test</scope>
-		</dependency>
+  <dependencies>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest</artifactId>
+      <version>2.2</version>
+      <scope>test</scope>
+    </dependency>
 
-		<!-- Do not update this dependency until Jenkins updates to 2.11.0 -->
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.11.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.12.0</version>
-		</dependency>
+    <!-- Do not update this dependency until Jenkins updates to 2.11.0 -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.11.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
 
-		<dependency>
-			<groupId>net.kieker-monitoring</groupId>
-			<artifactId>kieker</artifactId>
-			<version>${kieker.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>net.kieker-monitoring</groupId>
-			<artifactId>kieker</artifactId>
-			<version>${kieker.version}</version>
-			<classifier>aspectj</classifier>
-		</dependency>
-		<dependency>
-			<groupId>de.dagere.kieker</groupId>
-			<artifactId>kieker-source-instrumentation-library</artifactId>
-			<version>1.15.7</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sourceforge.teetime</groupId>
-			<artifactId>teetime</artifactId>
-			<version>3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>io.github.java-diff-utils</groupId>
-			<artifactId>java-diff-utils</artifactId>
-			<version>4.11</version>
-		</dependency>
+    <dependency>
+      <groupId>net.kieker-monitoring</groupId>
+      <artifactId>kieker</artifactId>
+      <version>${kieker.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>net.kieker-monitoring</groupId>
+      <artifactId>kieker</artifactId>
+      <version>${kieker.version}</version>
+      <classifier>aspectj</classifier>
+    </dependency>
+    <dependency>
+      <groupId>de.dagere.kieker</groupId>
+      <artifactId>kieker-source-instrumentation-library</artifactId>
+      <version>1.15.7</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sourceforge.teetime</groupId>
+      <artifactId>teetime</artifactId>
+      <version>3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.github.java-diff-utils</groupId>
+      <artifactId>java-diff-utils</artifactId>
+      <version>4.11</version>
+    </dependency>
 
-		<!-- Normally, we just use log4j2. Since kieker relies on slf4j, we need to add the bridge -->
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.17.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.30</version>
-		</dependency>
+    <!-- Normally, we just use log4j2. Since kieker relies on slf4j, we need to add the bridge -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>2.17.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.30</version>
+    </dependency>
 
-		<dependency>
-			<groupId>info.picocli</groupId>
-			<artifactId>picocli</artifactId>
-			<version>4.6.2</version>
-		</dependency>
+    <dependency>
+      <groupId>info.picocli</groupId>
+      <artifactId>picocli</artifactId>
+      <version>4.6.2</version>
+    </dependency>
 
-		<!-- Both are needed in your local maven repo, and both should be downloaded when building (but are only needed at runtime, if a project does not use snapshot 
-			repo) If you update the version, please do not forget to *update* also MavenPomUtil.KOPEME_VERSION. As a general convention, Snapshot-versions should only used in 
-			the develop branch; in the main branch, releases should be used -->
-		<dependency>
-			<groupId>de.dagere.kopeme</groupId>
-			<artifactId>kopeme-junit</artifactId>
-			<version>${kopeme.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>de.dagere.kopeme</groupId>
-			<artifactId>kopeme-junit3</artifactId>
-			<version>${kopeme.version}</version>
-			<scope>test</scope>
-		</dependency>
+    <!-- Both are needed in your local maven repo, and both should be downloaded when building (but are only needed at runtime, if a project does not use snapshot 
+      repo) If you update the version, please do not forget to *update* also MavenPomUtil.KOPEME_VERSION. As a general convention, Snapshot-versions should only used in 
+      the develop branch; in the main branch, releases should be used -->
+    <dependency>
+      <groupId>de.dagere.kopeme</groupId>
+      <artifactId>kopeme-junit</artifactId>
+      <version>${kopeme.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>de.dagere.kopeme</groupId>
+      <artifactId>kopeme-junit3</artifactId>
+      <version>${kopeme.version}</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-params</artifactId>
-			<version>5.8.2</version>
-			<scope>test</scope>
-		</dependency>
-    
-        <dependency>
-          <groupId>de.dagere</groupId>
-          <artifactId>requitur</artifactId>
-          <version>0.0.1</version>
-        </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.8.2</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>co.unruly</groupId>
-			<artifactId>java-8-matchers</artifactId>
-			<version>1.6</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>${mockito.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-inline</artifactId>
-			<version>${mockito.version}</version>
-			<scope>test</scope>
-		</dependency>
+    <dependency>
+      <groupId>de.dagere</groupId>
+      <artifactId>requitur</artifactId>
+      <version>0.0.1</version>
+    </dependency>
 
-		<dependency>
-			<groupId>com.googlecode.java-diff-utils</groupId>
-			<artifactId>diffutils</artifactId>
-			<version>1.3.0</version>
-		</dependency>
+    <dependency>
+      <groupId>co.unruly</groupId>
+      <artifactId>java-8-matchers</artifactId>
+      <version>1.6</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy-astbuilder</artifactId>
-			<version>3.0.9</version>
-		</dependency>
-	</dependencies>
+    <dependency>
+      <groupId>com.googlecode.java-diff-utils</groupId>
+      <artifactId>diffutils</artifactId>
+      <version>1.3.0</version>
+    </dependency>
 
-	<developers>
-		<developer>
-			<id>DaGeRe</id>
-			<name>David Georg Reichelt</name>
-			<email>kopeme@dagere.de</email>
-		</developer>
-	</developers>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-astbuilder</artifactId>
+      <version>3.0.9</version>
+    </dependency>
+  </dependencies>
 
-	<licenses>
-		<license>
-			<name>GNU General Public License (GPL) version 2.0</name>
-			<url>https://www.gnu.org/licenses/gpl-2.0.html</url>
-			<comments>License can be found in misc/gpl-2.0.txt</comments>
-		</license>
-	</licenses>
+  <developers>
+    <developer>
+      <id>DaGeRe</id>
+      <name>David Georg Reichelt</name>
+      <email>kopeme@dagere.de</email>
+    </developer>
+  </developers>
 
-	<profiles>
-		<profile>
-			<id>buildFatJar</id>
-			<activation>
-				<!-- The shade plugin took ~ 21 s from 25 s of build, if a shaded jar is built for every module Therfore, share is commented out currently; if a separate dependency-jar 
-					is needed, it could be re-enabled (or transfered to a profile) -->
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-shade-plugin</artifactId>
-						<version>3.2.4</version>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<goals>
-									<goal>shade</goal>
-								</goals>
-								<configuration>
-									<transformers>
-										<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-											<mainClass>de.peass.DependencyExecutionReader</mainClass>
-										</transformer>
-									</transformers>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+  <licenses>
+    <license>
+      <name>GNU General Public License (GPL) version 2.0</name>
+      <url>https://www.gnu.org/licenses/gpl-2.0.html</url>
+      <comments>License can be found in misc/gpl-2.0.txt</comments>
+    </license>
+  </licenses>
 
-	<repositories>
-		<repository>
-			<id>snapshots-repo</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
+  <profiles>
+    <profile>
+      <id>buildFatJar</id>
+      <activation>
+        <!-- The shade plugin took ~ 21 s from 25 s of build, if a shaded jar is built for every module Therfore, share is commented out currently; if a separate 
+          dependency-jar is needed, it could be re-enabled (or transfered to a profile) -->
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.2.4</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>shade</goal>
+                </goals>
+                <configuration>
+                  <transformers>
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                      <mainClass>de.peass.DependencyExecutionReader</mainClass>
+                    </transformer>
+                  </transformers>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+  <repositories>
+    <repository>
+      <id>snapshots-repo</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
