--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
   <properties>
     <mockito.version>4.3.1</mockito.version>
     <kieker.version>1.15</kieker.version>
-    <kopeme.version>0.17.3-SNAPSHOT</kopeme.version>
+    <kopeme.version>0.17.3</kopeme.version>
     <project.organization.name>DaGeRe</project.organization.name>
     <license.licenseName>agpl_v3</license.licenseName>
   </properties>
