--- a/measurement/pom.xml
+++ b/measurement/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>measurement</artifactId>
   <name>peass-measurement</name>
@@ -9,7 +8,7 @@
   <parent>
     <groupId>de.dagere.peass</groupId>
     <artifactId>peass-parent</artifactId>
-    <version>0.1.10-SNAPSHOT</version>
+    <version>0.1.10</version>
   </parent>
 
   <build>
@@ -85,13 +84,13 @@
     <dependency>
       <groupId>de.dagere.peass</groupId>
       <artifactId>dependency</artifactId>
-      <version>0.1.10-SNAPSHOT</version>
+      <version>0.1.10</version>
     </dependency>
 
     <dependency>
       <groupId>de.dagere.peass</groupId>
       <artifactId>dependency</artifactId>
-      <version>0.1.10-SNAPSHOT</version>
+      <version>0.1.10</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
