--- a/peass-jmh/pom.xml
+++ b/peass-jmh/pom.xml
@@ -87,12 +87,12 @@
     <dependency>
       <groupId>de.dagere.peass</groupId>
       <artifactId>dependency</artifactId>
-      <version>0.1.10-SNAPSHOT</version>
+      <version>0.1.10</version>
     </dependency>
     <dependency>
       <groupId>de.dagere.peass</groupId>
       <artifactId>dependency</artifactId>
-      <version>0.1.10-SNAPSHOT</version>
+      <version>0.1.10</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
