--- a/.github/workflows/buildPeass.yml
+++ b/.github/workflows/buildPeass.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     strategy: 
         matrix:
-          os: [ubuntu-latest, macos-latest, windows-latest] # no windows since kieker currently does not support windows execution
+          os: [ubuntu-latest, windows-latest] # no macos-latest since github actions always procudes EDTIMEOUT
           java: [ 1.8, 11, 17 ]
         fail-fast: false
     runs-on: ${{ matrix.os }}
