Enable excluding log4j-to-slf4j

--- a/dependency/src/test/resources/gradle/buildConstraints.gradle
+++ b/dependency/src/test/resources/gradle/buildConstraints.gradle
@@ -19,6 +19,13 @@ subprojects {
     test {
         useJUnitPlatform()
     }
-
+    
+    configurations {
+        all {
+            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+        }
+        compileOnly {
+            extendsFrom annotationProcessor
+        }
+    }
 }
-
