--- a/.github/workflows/buildPeass.yml
+++ b/.github/workflows/buildPeass.yml
@@ -42,7 +42,7 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build Peass all (for version compatibility check)
-      run: ./mvnw -B package -DskipTests -P buildStarter --file pom.xml && ls ~/.m2/repository/ && ls -lah ~/.m2/repository/de/dagere/kopeme/kopeme-core
+      run: rm ~/.m2/repository/de/dagere/kopeme/ -rf && ./mvnw -B package -DskipTests -P buildStarter --file pom.xml && ls ~/.m2/repository/ && ls -lah ~/.m2/repository/de/dagere/kopeme/kopeme-core
     - name: Build Peass dependency, measurement and analysis
       run: ./mvnw -B install --file pom.xml
     - name: Publish Test Report ${{ matrix.java }} OS ${{ matrix.os }}
