--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -3,7 +3,8 @@
   by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. PerAn is distributed in the hope that it will be useful, 
   but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. 
   You should have received a copy of the GNU General Public License along with PerAn. If not, see <http://www.gnu.org/licenses />. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>dependency</artifactId>
   <name>peass-dependency</name>
@@ -99,22 +100,10 @@
       <version>1.15.11</version>
     </dependency>
 
-    <!-- We need to exclude teetimes guava version and use the latest to avoid security problems (which are unlikely to cause problems in a quality assurance tool, but better safe than sorry)-->
     <dependency>
-      <groupId>net.sourceforge.teetime</groupId>
+      <groupId>de.cau.cs.se.teetime</groupId>
       <artifactId>teetime</artifactId>
-      <version>3.0</version>
-      <exclusions>
-        <exclusion>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency> 
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>31.1-jre</version>
+      <version>3.1.0</version>
     </dependency>
 
     <dependency>
