--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -97,7 +97,7 @@
     <dependency>
       <groupId>de.dagere.kieker</groupId>
       <artifactId>kieker-source-instrumentation-library</artifactId>
-      <version>1.15.12-SNAPSHOT</version>
+      <version>1.15.12</version>
     </dependency>
 
     <dependency>
