--- a/pom.xml
+++ b/pom.xml
@@ -131,9 +131,9 @@
   </build>
 
   <properties>
-    <mockito.version>4.4.0</mockito.version>
+    <mockito.version>4.5.1</mockito.version>
     <kieker.version>1.15.1</kieker.version>
-    <kopeme.version>1.0.2-SNAPSHOT</kopeme.version>
+    <kopeme.version>1.0.2</kopeme.version>
     <project.organization.name>DaGeRe</project.organization.name>
     <license.licenseName>agpl_v3</license.licenseName>
   </properties>
