[maven-release-plugin] prepare release peass-parent-0.2.0

--- a/measurement/pom.xml
+++ b/measurement/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>de.dagere.peass</groupId>
     <artifactId>peass-parent</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.0</version>
   </parent>
 
   <build>
