--- a/dependency/src/test/resources/gradle-multimodule-subprojectexample/build.gradle
+++ b/dependency/src/test/resources/gradle-multimodule-subprojectexample/build.gradle
@@ -12,7 +12,7 @@ sourceCompatibility = 1.8
 version = '2.13'
 
 dependencies {
-  testCompile 'junit:junit:4.13.2'
+  testImplementation 'junit:junit:4.13.2'
 }
 
 test {
