--- a/dependency/src/test/resources/gradle/build.gradle
+++ b/dependency/src/test/resources/gradle/build.gradle
@@ -1,36 +1,39 @@
-buildscript {
-    repositories {
-	jcenter()
-        mavenCentral()
-    }
-
-    ext {
-        buildConfig = [
-                'compileSdk': 27,
-                'minSdk': 15,
-                'buildTools': '19.0.3'
-        ]
-    }
-}
-
-
-
 apply plugin: 'java'
-apply plugin: 'eclipse'
 
-sourceCompatibility = 1.8
-version = '2.13'
-
-repositories {
-    mavenCentral()
-    mavenLocal()
-    maven{
-		url 'https://oss.sonatype.org/content/repositories/snapshots'
-	}
+sourceSets {
+    integrationTest {
+        java {
+            compileClasspath += main.output + test.output
+            runtimeClasspath += main.output + test.output
+            srcDir file('src/integration-test/java')
+        }
+        resources.srcDir file('src/integration-test/resources')
+    }
 }
 
 dependencies {
-  constraints {
-    testCompile 'junit:junit:4.13.2'
-  }
+    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+}
+
+configurations {
+    integrationTestImplementation.extendsFrom testImplementation
+}
+
+test {
+    systemProperties([
+            'junit.jupiter.execution.parallel.enabled'             : 'true',
+    ])
+    maxHeapSize = "6g"
+
+}
+
+task integrationTest(type: Test) {
+    useJUnitPlatform()
+    systemProperties([
+            'junit.jupiter.execution.parallel.enabled'             : 'true',
+    ])
+    maxHeapSize = "6g"
+    group = 'verification'
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
 }
