Correctly read ZIP files

--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -159,7 +159,7 @@
     <dependency>
       <groupId>de.dagere</groupId>
       <artifactId>requitur</artifactId>
-      <version>0.0.1</version>
+      <version>0.0.2-SNAPSHOT</version>
     </dependency>
 
     <dependency>
