Use newer source instrumentation which uses log4j 2.18.0

--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -95,7 +95,7 @@
     <dependency>
       <groupId>de.dagere.kieker</groupId>
       <artifactId>kieker-source-instrumentation-library</artifactId>
-      <version>1.15.13</version>
+      <version>1.15.14-SNAPSHOT</version>
     </dependency>
 
     <dependency>
