Update Test for editing execution mode

--- a/dependency/src/test/resources/gradle/buildSystemProperties.gradle
+++ b/dependency/src/test/resources/gradle/buildSystemProperties.gradle
@@ -20,18 +20,15 @@ configurations {
 }
 
 test {
-    systemProperties([
-            'junit.jupiter.execution.parallel.mode.default'        :'concurrent',
-    ])
+    systemProperty  'junit.jupiter.execution.parallel.mode.default'        ,'concurrent'
+    systemProperty  'junit.jupiter.execution.parallel.enabled', true
     maxHeapSize = "6g"
-
 }
 
 task integrationTest(type: Test) {
+    systemProperty  'junit.jupiter.execution.parallel.mode.default'        ,'concurrent'
+    systemProperty  'junit.jupiter.execution.parallel.enabled', true
     useJUnitPlatform()
-    systemProperties([
-            'junit.jupiter.execution.parallel.enabled'             : 'true',
-    ])
     maxHeapSize = "6g"
     group = 'verification'
     testClassesDirs = sourceSets.integrationTest.output.classesDirs
