--- a/.github/workflows/buildPeassForPR.yml
+++ b/.github/workflows/buildPeassForPR.yml
@@ -3,7 +3,11 @@
 
 name: Build Peass libraries
 
-on: [push, workflow_dispatch]
+on:
+  pull_request:
+    branches: [ master, main, develop ]
+  workflow_dispatch:
+    branches: [ master, main, develop ]
 
 jobs:
   build:
@@ -46,18 +50,3 @@ jobs:
       #      run: rm ~/.m2/repository/de/dagere/kopeme/ -r && ./mvnw -B package -DskipTests -P buildStarter --file pom.xml && ls ~/.m2/repository/ && ls ~/.m2/repository/de/dagere/kopeme/kopeme-core
     - name: Build Peass dependency, measurement and analysis
       run: ./mvnw -B install --file pom.xml
-    - name: Publish Test Report ${{ matrix.java }} OS ${{ matrix.os }}
-      if: ${{ always() }}
-      uses: scacap/action-surefire-report@v1
-      with:
-         github_token: ${{ secrets.GITHUB_TOKEN }}
-         check_name: Test Report ${{ matrix.java }} OS ${{ matrix.os }}
-    - name: Upload Unit Test Results
-      if: ${{ always() }}
-      uses: actions/upload-artifact@v2
-      with:
-        name: Unit Test Results (Java ${{ matrix.java }} OS ${{ matrix.os }})
-        path: |
-          dependency/target/surefire-reports/*
-          measurement/target/surefire-reports/*
-          analysis/target/surefire-reports/*
