Update javadoc plugin to 3.5.0, nexus release plugin to 1.6.13, use de.dagere.nodeDiffDetector with final coordinates

--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -64,7 +64,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>de.dagere.peass</groupId>
+      <groupId>de.dagere</groupId>
       <artifactId>nodeDiffDetector</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
