Update to bytebuddy 1.4.11, to avoid Mockito error with Java 21

--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -186,6 +186,18 @@
       <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy</artifactId>
+      <version>1.14.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy-agent</artifactId>
+      <version>1.14.11</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>com.googlecode.java-diff-utils</groupId>
