--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -40,6 +40,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>io.github.terahidro2003</groupId>
+      <artifactId>sfsw</artifactId>
+      <version>0.2.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest</artifactId>
       <version>2.2</version>
@@ -49,6 +54,12 @@
       <groupId>de.dagere.peass</groupId>
       <artifactId>measurement</artifactId>
       <version>${project.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>sfsw</artifactId>
+          <groupId>io.github.terahidro2003</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>de.dagere.peass</groupId>
