Add sjsw snapshot version

--- a/measurement/pom.xml
+++ b/measurement/pom.xml
@@ -64,7 +64,7 @@
     <dependency>
       <groupId>io.github.terahidro2003</groupId>
       <artifactId>sjsw</artifactId>
-      <version>0.1.1</version>
+      <version>0.1.1-SNAPSHOT</version>
     </dependency>
 
     <!-- For execution, it is assumed that the kieker aspectJ-jar is in the local .m2 directory; no need for inclusion in jar, therefore scope runtime -->
